--- a/Data Frame/unstack().ipynb
+++ b/Data Frame/unstack().ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "17c2ef01",
    "metadata": {},
    "outputs": [],
@@ -12,150 +12,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "971bcc62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\u001b[38;5;241m,\u001b[39m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd, numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "825bede2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pclass</th>\n",
-       "      <th>survived</th>\n",
-       "      <th>name</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age</th>\n",
-       "      <th>sibsp</th>\n",
-       "      <th>parch</th>\n",
-       "      <th>ticket</th>\n",
-       "      <th>fare</th>\n",
-       "      <th>cabin</th>\n",
-       "      <th>embarked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Allen, Miss. Elisabeth Walton</td>\n",
-       "      <td>female</td>\n",
-       "      <td>29.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24160</td>\n",
-       "      <td>211.3375</td>\n",
-       "      <td>B5</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Allison, Master. Hudson Trevor</td>\n",
-       "      <td>male</td>\n",
-       "      <td>0.92</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>113781</td>\n",
-       "      <td>151.5500</td>\n",
-       "      <td>C22 C26</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Allison, Miss. Helen Loraine</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>113781</td>\n",
-       "      <td>151.5500</td>\n",
-       "      <td>C22 C26</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Allison, Mr. Hudson Joshua Creighton</td>\n",
-       "      <td>male</td>\n",
-       "      <td>30.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>113781</td>\n",
-       "      <td>151.5500</td>\n",
-       "      <td>C22 C26</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Allison, Mrs. Hudson J C (Bessie Waldo Daniels)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>25.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>113781</td>\n",
-       "      <td>151.5500</td>\n",
-       "      <td>C22 C26</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   pclass  survived                                             name     sex  \\\n",
-       "0       1         1                    Allen, Miss. Elisabeth Walton  female   \n",
-       "1       1         1                   Allison, Master. Hudson Trevor    male   \n",
-       "2       1         0                     Allison, Miss. Helen Loraine  female   \n",
-       "3       1         0             Allison, Mr. Hudson Joshua Creighton    male   \n",
-       "4       1         0  Allison, Mrs. Hudson J C (Bessie Waldo Daniels)  female   \n",
-       "\n",
-       "     age  sibsp  parch  ticket      fare    cabin embarked  \n",
-       "0  29.00      0      0   24160  211.3375       B5        S  \n",
-       "1   0.92      1      2  113781  151.5500  C22 C26        S  \n",
-       "2   2.00      1      2  113781  151.5500  C22 C26        S  \n",
-       "3  30.00      1      2  113781  151.5500  C22 C26        S  \n",
-       "4  25.00      1      2  113781  151.5500  C22 C26        S  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#load data frame dengan function .read\n",
     "df = pd.read_csv('./Data/titanicfull.csv')\n",
@@ -185,87 +67,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "81adce36",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>survived</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sex</th>\n",
-       "      <th>pclass</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">female</th>\n",
-       "      <th>1</th>\n",
-       "      <td>0.965278</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.886792</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.490741</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">male</th>\n",
-       "      <th>1</th>\n",
-       "      <td>0.340782</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.146199</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.152130</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               survived\n",
-       "sex    pclass          \n",
-       "female 1       0.965278\n",
-       "       2       0.886792\n",
-       "       3       0.490741\n",
-       "male   1       0.340782\n",
-       "       2       0.146199\n",
-       "       3       0.152130"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.groupby(['sex', 'pclass'])['survived'].mean().to_frame()\n",
     "\n",
@@ -285,71 +90,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "156ded6b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>pclass</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sex</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>female</th>\n",
-       "      <td>0.965278</td>\n",
-       "      <td>0.886792</td>\n",
-       "      <td>0.490741</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>male</th>\n",
-       "      <td>0.340782</td>\n",
-       "      <td>0.146199</td>\n",
-       "      <td>0.152130</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "pclass         1         2         3\n",
-       "sex                                 \n",
-       "female  0.965278  0.886792  0.490741\n",
-       "male    0.340782  0.146199  0.152130"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.groupby(['sex', 'pclass'])['survived'].mean().unstack()"
    ]
@@ -365,7 +109,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
